added license file added sample license header to CLI class added PMD ruleset made most of the code PMD compliant